src/personal-finance/shared/offers/offers-list/offers-list.component.less
@mainColor: #000;
@text-color: #4a4a4a;
@blue: #3463ae;

:host {
    display: block;
    @media all and (max-width: 540px) {
        padding: 0 15px;
    }

    .load-more-items {
        border: 1px solid #b1770b;
        border-radius: 4px;
        background-image: linear-gradient(0deg, #fdb337, #f3ea80);

        font-size: 24px;
        font-weight: bold;
        color: #333;
        display: flex;
        align-items: center;
        margin: 20px auto;
        padding: 10px 60px;
        transition: .3s;

        &:hover {
            background-image: linear-gradient(0deg, #f3ea80, #fdb337);
        }

        @media all and (max-width: 768px) {
            font-size: 18px;
            padding: 10px 25px;
        }
    }

    ul {
        padding-left: 0;
        list-style: none;
    }

    a.viewDetails {
        margin: 5px;
        display: inline-block;
        color: #5867dd;
        font-weight: 500;
    }

    .subHeader {
        display: flex;
        justify-content: space-between;
        align-items: center;
        position: relative;

        h2 {
            margin-top: 40px;
            margin-bottom: 20px;
            font-size: 30px;
            font-weight: bold;

            @media all and(max-width: 768px) {
                font-size: 20px;
                margin-top: 20px;
            }

            @media all and(max-width: 540px) {
                font-size: 14px;
            }
        }

        .foundCount {
            color: @mainColor;
            font-size: 28px;
            font-weight: 500;
            letter-spacing: 0.22px;
            line-height: 28px;
            span {
                font-weight: 600;
            }
            @media (min-width: 768px) {
                line-height: 21px;
            }
            &.hidden {
                visibility: hidden;
            }
        }
        .sortBy {
            font-size: 14px;
            letter-spacing: 0.16px;
            display: flex;
            min-width: 170px;
            flex-basis: 20%;
            label {
                @media (max-width: 991px) {
                    display: none;
                }
            }
            /deep/ mat-select {
                mat-option {
                    color: #171C1D;
                    font-size: 15px;
                    font-weight: 600;
                    letter-spacing: 0.18px;
                    line-height: 21px;
                }
                .mat-select-value,
                .mat-select-arrow {
                    color: #171C1D;
                    font-size: 15px;
                    font-weight: 600;
                    letter-spacing: 0.18px;
                    line-height: 21px;
                }
            }
            span {
                margin-right: 10px;
                white-space: nowrap;
                color: #4a4a4a;
            }
            @media (max-width: 991px) {
                min-width: 0;
                visibility: hidden;
                position: absolute;
                right: 0;
                top: 70px;
            }
        }
    }

    ul.credit-cards-list {
        & > li {
            border: 1px solid #666;
            padding: 35px 40px;
            display: flex;
            align-items: center;
            position: relative;
            margin-bottom: 8px;

            @media all and (max-width: 400px) {
                padding: 20px 0 5px;
            }
            .left-side {
                text-align: center;

                .img-wrap {
                    max-width: 230px;
                    width: 100%;
                    margin: 0 auto;
                    padding-bottom: 0;

                    @media all and (max-width: 400px) {
                        margin-top: 15px;
                    }

                    img {
                        cursor: pointer;
                        max-width: 180px;
                    }
                }
            }

            .img-wrap,
            .actions-wrap {
                padding: 15px 0;
            }

            .actions-wrap {
                button {
                    border: 1px solid #b1770b;
                    border-radius: 3px;
                    background-image: linear-gradient(0deg, #fdb337, #f3ea80);

                    font-size: 20px;
                    font-weight: bold;
                    color: #333;
                    display: flex;
                    align-items: center;
                    margin: 0 auto;

                    &.applyButton {
                        padding: 10px 20px;
                        width: 100%;
                        max-width: 180px;
                    }

                    &:hover {
                        background-image: linear-gradient(0deg, #f3ea80, #fdb337);
                    }
                }
                @media (max-width: 767px) {
                    padding-bottom: 0;
                }
            }

            .corner-block {
                position: absolute;
                top: 0;
                left: 0;
                width: 90px;
                height: 90px;
                font-size: 24px;
                font-weight: bold;
                overflow: hidden;

                .number {
                    width: 50px;
                    height: 50px;
                    line-height: 50px;
                    text-align: center;
                    display: block;
                    position: absolute;
                    top: 0;
                }

                &::before {
                    content: '';
                    display: block;
                    width: 90px;
                    height: 90px;

                    border-left: 90px solid #ffcc00;
                    border-right: 90px solid transparent;
                    border-top: 90px solid #ffcc00;
                    // box-shadow: 0 0 0 1px #333;

                    transform: translateX(-50%);
                }

                &.secondary {
                    .number {
                        color: #fff;
                    }

                    &::before {
                        content: '';
                        display: block;
                        width: 90px;
                        height: 90px;

                        border-left: 90px solid #333;
                        border-right: 90px solid transparent;
                        border-top: 90px solid #333;
                        // box-shadow: 0 0 0 1px #333;

                        transform: translateX(-50%);
                    }
                }
            }

            &.recommend {
                background-color: #f3f3f3;
            }

            .description {
                h5 {
                    font-size: 13px;
                    font-weight: normal;
                    color: @text-color;
                }
                align-self: flex-start !important;

                .bank-name {
                    font-size: 95%;
                    color: #656565;
                    display: block;

                    @media all and (max-width: 768px) {
                        text-align: center;
                    }
                }

                h4 {
                    color: @mainColor;
                    font-size: 24px;
                    font-weight: 700;
                    letter-spacing: 0.24px;
                    line-height: 1.35em;
                    margin: 20px auto 10px;
                    cursor: pointer;

                    @media all and(max-width: 768px) {
                        text-align: center;
                        font-size: 20px;
                        margin: 0;
                    }

                    + p {
                        font-size: 16px;
                        font-weight: 500;
                    }
                }

                small + h4 {
                    margin-top: 10px !important;
                }

                .rating {
                    color: @blue;
                    font-size: 14px;
                    font-weight: 600;
                    letter-spacing: 0.17px;
                    line-height: 25px;
                    margin-bottom: 7px;

                    stars-rating {
                        margin-right: 8.39px;
                    }
                }

                .descriptionItems {
                    display: flex;
                    flex-direction: column;
                    li {
                        display: flex;
                        align-items: center;
                        padding-bottom: 5px;

                        &::before {
                            content: url(../../../../assets/common/icons/check-mark.png);
                            display: inline-block;
                            align-self: flex-start;
                            margin: 5px 5px 0 0;
                        }

                        // &:not(:last-child) {
                        //     margin-right: 15px;
                        // }

                        // h5 {
                        //     font-size: 13px;
                        //     font-weight: 500;
                        //     line-height: 1.62;
                        //     letter-spacing: 0.2px;
                        //     color: @additional-font-color;
                        //     margin-bottom: 0;
                        // }

                        p {
                            font-weight: 600;
                            font-size: 15px;
                            line-height: 1.4;
                            letter-spacing: 0.2px;
                            color: #000;
                            margin-bottom: 0;
                        }
                    }
                }
            }

            .best-offer {
                font-size: 20px;
                color: #fff;
                background: #33cc00;
                position: absolute;
                right: 0;
                top: 0;
                padding: 6px 22px;
                font-weight: 700;

                @media all and (max-width: 400px) {
                    font-size: 16px;
                    padding: 6px 14px;
                }
            }

            .actions {
                text-align: center;
                display: flex;
                flex-direction: column;
                align-items: center;
                align-self: flex-start;
                @media (max-width: 768px) {
                    position: absolute;
                    top: 40px;
                    right: 0;
                    width: auto;
                }
                .viewMore {
                    @media (max-width: 768px) {
                        display: none;
                    }
                }
            }
        }

        &.simple-design {
            .img-wrap {
                max-width: 400px !important;
                padding-top: 0 !important;
                width: 100%;
                margin: 0 auto;
                padding-bottom: 0;
                img {
                    cursor: pointer;
                    max-width: 100% !important;
                    @media (max-width: 767px) {
                        max-width: 70% !important;
                    }
                }
                @media (max-width: 767px) {
                    margin-top: 20px !important;
                }
            }
            .actions-wrap {
                @media (max-width: 767px) {
                    padding: 5px 0 !important;
                }
            }
            & > li .description h4 {
                text-align: center;
            }
        }
    }
}

